<resources>
    <string name="app_name">BusRJ</string>
    <string name="empty_search_title">Nenhum resultado encontrado</string>
    <string name="empty_search_description">Não encontramos nenhum resultado para a busca realizada. Confira se o campo buscado foi digitado corretamente.</string>
    <string name="empty_favorites_title">Não há favoritos</string>
    <string name="empty_favorites_description">Você ainda não favoritou nenhuma linha de ônibus. Busque por uma linha e ao entrar nos detalhes dessa linha clique no coração para favoritá-la.</string>
    <string name="error_title">Algo deu errado</string>
    <string name="error_description">Ocorreu um problema ao tentar carregar esta tela. Confira sua conexão e tente novamente.</string>
    <string name="try_again">Tentar Novamente</string>
    <string name="menu_search_title">Buscar</string>
    <string name="menu_search_description">Busque uma linha de ônibus para saber onde os ônibus dessa linha se encontram</string>
    <string name="menu_favorite_title">Favoritos</string>
    <string name="menu_favorite_description">Confira suas linhas favoritas e verifique onde estão os ônibus das mesmas.</string>
    <string name="line">Linha %s</string>
    <string name="search_bus_line">Buscar linha de ônibus</string>
    <string name="save_favorite">Linha adiciona aos Favoritos!</string>
    <string name="remove_favorite">Linha removida dos Favoritos!</string>
</resources>