<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.home.HomeActivity">

    <br.com.fdassa.busrj.views.MenuItemView
        android:id="@+id/menu_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:menu_description="@string/menu_search_description"
        app:menu_icon="@drawable/ic_search"
        app:menu_title="@string/menu_search_title" />

    <br.com.fdassa.busrj.views.MenuItemView
        android:id="@+id/menu_favorites"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/menu_search"
        app:menu_description="@string/menu_favorite_description"
        app:menu_icon="@drawable/ic_favorite"
        app:menu_title="@string/menu_favorite_title" />

</androidx.constraintlayout.widget.ConstraintLayout>